# authoring-server

./: .env  .gitignore  Cargo.toml  config.json  diesel.toml
.github/workflows/: build.yml
client/: package-lock.json  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs
client/utils/: index.js
json/: create_item.json  create_passage.json
migrations/2025-08-27-161748_create_project/: down.sql  up.sql
migrations/2025-08-29-155518_create_tasks/: down.sql  up.sql
migrations/2025-09-02-082614_drop_column/: down.sql  up.sql
migrations/2025-09-02-092116_drop_column/: down.sql  up.sql
migrations/2025-09-05-112533_add_secret_to_user/: down.sql  up.sql
migrations/2025-09-06-082735_add_phone_numbers/: down.sql  up.sql
migrations/2025-10-09-174107_add_tos/: down.sql  up.sql
migrations/2025-10-13-153850_rm_placement_from_tos/: down.sql  up.sql
migrations/2025-10-13-181331_add_passage_rubric/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  schema.rs
src/handlers/: auth.rs  items.rs  mod.rs  subject.rs  topics.rs  user.rs
src/helpers/: dto.rs  jwt.rs  mod.rs  otp.rs  querys.rs
src/macros/: db.rs  mod.rs
src/mailer/: config.rs  email.rs  mod.rs  types.rs
src/models/: item.rs  item_options.rs  mod.rs  passages.rs  tasks.rs  topic.rs  tos.rs  user.rs
src/services/: auth.rs  items.rs  mod.rs  subject.rs  tmp.rs  topics.rs  user.rs
templates/: account.hbs  otp.hbs
